# remi

./: .clangd  .gitignore  README.md  build.py  clean.py  clear_build_cache.py  cross-wasm.txt  dev.bat  dev.py  example.py  generate_meson_options.py  install.py  install_boost_wasm.py  install_box2d.py  makefile  makefile-sfml  meson.build  prod.bat  setup.py  uninstall.py
cross/: wasm.txt
dev/: em-shell.html  main.cpp  meson.build
dev/include/: Application.h
dev/src/: Application.cpp
examples/: README.md
examples/__build/: em-shell.html  meson.build
examples/__helpers/: BasicCamera.h  Fps.h
examples/animated-texture/: main.cpp
examples/animated_texture/: info.json  main.cpp
examples/concave-collider/: info.json  main.cpp
examples/hello-world/: main.cpp
examples/hello_world/: info.json  main.cpp
examples/relationship/: RotateSystem.h  info.json  main.cpp
examples/simple-physics/: info.json  main.cpp
examples/text/: info.json  main.cpp
examples/text-physics/: info.json  main.cpp
examples/text-physics-letters/: info.json  main.cpp
examples/texture/: info.json  main.cpp
include/: Application.h  Config.h  Engine.h  TypeList.h  emscriptenHelpers.h  gl.h
include/Audio/: Audio.h  AudioManager.h  Music.h  MusicManager.h  SoundEffect.h  SoundEffectManager.h
include/Core/: AABB.h  BoundingCircle.h  Observer.h  SpaceTransformer.h  Subject.h  Timestep.h  Transform.h  Window.h
include/Core/AABB/: AABB.h  AABBTree.h  AABBTreeNode.h
include/ECS/: Component.h  Entity.h  Registry.h  SparseSet.h  System.h
include/Input/: Keyboard.h  Mouse.h
include/Physics/: BodyUserData.h  Collider2D.h  ColliderShape.h  CollisionFilter.h  ContactFilter.h  ContactInfo.h  ContactListener.h  MouseJointUpdateSystem.h  PhysicsWorld.h  QueryCallback.h  Ray.h  RigidBody2d.h
include/Physics/Joints/: DistanceJoint.h  FrictionJoint.h  GearJoint.h  Joint.h  MotorJoint.h  MouseJoint.h  PrismaticJoint.h  PulleyJoint.h  RevoluteJoint.h  WeldJoint.h  WheelJoint.h
include/Rendering/: Camera.h  Color.h  Config.h  Mesh.h  RenderManager.h  RenderPipeline.h  RenderTarget.h  Renderable.h  Renderer.h  SDLRenderer.h  SFMLRenderer.h  Shader.h  Window.h
include/Rendering/Camera/: ActiveCamera.h  Camera.h
include/Rendering/Font/: Font.h  MemoizedText.h  Text.h
include/Rendering/Material/: AnimatedMaterial.h  Color.h  Material.h  MaterialHelpers.h  ShaderMaterial.h
include/Rendering/Mesh/: Mesh.h  Polygons.h  Transforms.h  Triangulate.h
include/Rendering/Passes/: BatchPass.h  BrightnessPass.h  ColorBlendPass.h  CullingPass.h  DebugRenderTreePass.h  DrawPass.h  GaussianBlurPass.h  MaterialPass.h  OutputPass.h  PhysicsDebugPass.h  PostProcessingPass.h  PosterizePass.h  RenderPass.h  RenderablesPass.h
include/Rendering/Shader/: BatchedMeshShader.h  GLType.h  InstancedMeshShader.h  MeshShader.h  Shader.h  Shader.old.h  Uniform.h  VertexAttrib.h  VertexIndices.h
include/Rendering/Shapes/: Circle.h  Rect.h
include/Rendering/Texture/: AnimatedTexture.h  AnimationSystem.h  Texture.h  TextureAtlas.h  TextureManager.h
include/Rendering/Utility/: EventEmitter.h  GlmHelpers.h  OpenGLHelpers.h  Timestep.h
include/Scene/: SceneGraph.h
include/Utility/: FileHandling.h  SDLHelpers.h  Timestep.h  TypeHelpers.h  glfwSetCallbacks.h
include/World/: World.h
src/: Application.cpp  Engine.cpp  emscriptenHelpers.cpp
src/Audio/: Audio.cpp  AudioManager.cpp  Music.cpp  MusicManager.cpp  SoundEffect.cpp  SoundEffectManager.cpp
src/Core/: AABB.cpp  BoundingCircle.cpp  SpaceTransformer.cpp  Timestep.cpp  Transform.cpp  Window.cpp
src/Core/AABB/: AABB.cpp
src/ECS/: Component.cpp  Entity.cpp  Registry.cpp
src/Input/: Keyboard.cpp  Mouse.cpp
src/Physics/: Collider2D.cpp  ColliderShape.cpp  ContactFilter.cpp  ContactListener.cpp  MouseJointUpdateSystem.cpp  PhysicsWorld.cpp  QueryCallback.cpp  Ray.cpp  RigidBody2D.cpp
src/Physics/Joints/: DistanceJoint.cpp  FrictionJoint.cpp  GearJoint.cpp  Joint.cpp  MotorJoint.cpp  MouseJoint.cpp  PrismaticJoint.cpp  PulleyJoint.cpp  RevoluteJoint.cpp  WeldJoint.cpp  WheelJoint.cpp
src/Rendering/: Camera.cpp  Color.cpp  Mesh.cpp  RenderManager.cpp  RenderPipeline.cpp  RenderTarget.cpp  Renderable.cpp  Renderer.cpp  SDLRenderer.cpp  SFMLRenderer.cpp  Shader.cpp  Window.cpp
src/Rendering/Camera/: Camera.cpp
src/Rendering/Font/: Font.cpp  MemoizedText.cpp  Text.cpp
src/Rendering/Material/: AnimatedMaterial.cpp  Color.cpp  Material.cpp  MaterialHelpers.cpp  ShaderMaterial.cpp
src/Rendering/Mesh/: Mesh.cpp  Polygons.cpp  Transforms.cpp  Triangulate.cpp
src/Rendering/Passes/: BatchPass.cpp  BrightnessPass.cpp  ColorBlendPass.cpp  CullingPass.cpp  DebugRenderTreePass.cpp  DrawPass.cpp  GaussianBlurPass.cpp  MaterialPass.cpp  OutputPass.cpp  PhysicsDebugPass.cpp  PostProcessingPass.cpp  PosterizePass.cpp  RenderablesPass.cpp
src/Rendering/Shader/: Shader.cpp  Shader.old.cpp  VertexIndices.cpp
src/Rendering/Texture/: AnimatedTexture.cpp  AnimationSystem.cpp  Texture.cpp  TextureAtlas.cpp  TextureManager.cpp
src/Rendering/Utility/: FileHandling.cpp  GlmHelpers.cpp  OpenGLHelpers.cpp  SDLHelpers.cpp
src/Scene/: SceneGraph.cpp
src/Utility/: FileHandling.cpp  SDLHelpers.cpp  TypeHelpers.cpp  glfwSetCallbacks.cpp
src/World/: World.cpp
subprojects/: boost.wrap
